--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #02010E;
-    --azul: #57AEFF;
+    --cor-de-fundo: #1E1E1E;
+    --verde: #6FFF57;
     --branco: #FFFFFF;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
@@ -33,7 +33,7 @@ body {
 }
 
 .titulo-principal span {
-    color: var(--azul);
+    color: var(--verde);
 }
 
 .botao {
@@ -43,7 +43,7 @@ body {
     display: flex;
     justify-content: center;
     padding: 1em;
-    font-size: 20px;
+    font-size: 18px;
     align-items: center;
     width: 100%;
     border-bottom: 4px solid var(--botao-ativo);
@@ -59,11 +59,6 @@ body {
 .botoes {
     display: block;
 }
-
-.ativo {
-    background-color: var(--botao-ativo);
-    border-bottom: 4px solid var(--azul);
-    }
 
 
 @media screen and (min-width: 768px) {
